Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-11756

kib_conn leak

XMLWordPrintable

    • 3
    • 9223372036854775807

      crash>kib_conn_t.ibc_peer,ibc_refcount,ibc_list,ibc_state,ibc_comms_error,ibc_tx_queue_nocred 0xffff8808c0612e00
        ibc_peer = 0xffff880f0e2a2780
        ibc_refcount = {
          counter = 1
        }
        ibc_list = {
          next = 0xdead000000100100, 
          prev = 0xdead000000200200
        }
        ibc_state = 5
        ibc_comms_error = -12
        ibc_tx_queue_nocred = {
          next = 0xffffc900200de3e0, 
          prev = 0xffffc900200de3e0
        }
      

      A tx was queued by a race into ibc_tx_queue_nocred while disconnecting connection. So the connection stays in unused state but it can't be destroyed because it is referenced by the tx.
      It results inĀ 

      [18891797.073780] Lustre: 1572:0:(niobuf.c:292:ptlrpc_abort_bulk()) Unexpectedly long timeout: desc ffff880a4eaf1c00
      

            askulysh Andriy Skulysh
            askulysh Andriy Skulysh
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved: